@@ -1,6 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 1.4.26-tinfo.patch 767 SHA256 5283a6e2ebbfc5192a9598bf2cbf3bc63d6a11613d1fa650708358da584ad519 SHA512 2f2a60951357f9d05213616ae1e623feb052bdd480e8c46e47eaabb86b53a5822e8ffcbd321d502de49b670f72075445e303ef78bcb02deb9ee16ae7f7590b65 WHIRLPOOL 3bb7a934be592b0f282aaf93e94c4ae7c939bd9cc945e122c40ba242284f48cac3855c240081fc654b6e684ddbd5769ead1ff0c2d3ccbd6e7bda824b34f7ba18
-AUX burp.initd 589 SHA256 8e432f4cbd42673d3d3451bc47b41e4ccd205433691b00754ad8a64b1479bbfa SHA512 63c5bb4f5a7cd2b6b8cec8f430a15cf53c8292dc9435582602c454b8460c5a091f9988cf81c9a77ca63bd2d74ee9a3e8b689536fad8aa849629ce9f5ba2b6163 WHIRLPOOL 84059c38ef307490819ad271efb5596ac30a4e9abfdbca974782a84900ac9bb080bfcb3e67411fd4c440a5bdc71d678eea085740fe34c54279bf01124586243e
+AUX burp.initd 706 SHA256 84f0f15720100ff3629d7194f94a888e467a5490462a235e5ed18f3c7f96c3e2 SHA512 e3b9df487db36d9229f1f2374c1127ee7110615af55b3d60e4fb6783027dfede8bd609601e2fe79b7a8ca70b933166b7338a83d38b74726bc80f630225763f8d WHIRLPOOL 46f8bcfd555e75da5b28983001503a66636df500e73cb3c029d151b1c0b05de80712acbda6aeb440a6d3eba9eadf8af322a3b86b839e19817b9c224ca8423eec
 DIST burp-1.4.26.tar.bz2 710273 SHA256 04111dd0d41277b6b257d7551333f394a3b6da12ffefc8222ba99777ed9448ff SHA512 d42249ac837a642ad0ca980060053d58685c2a5aa61d790ad67a72828fe632f99346886d29e175f6f533267608e55d784db86d5f0ee946519b937ef2825d4530 WHIRLPOOL f724d0a91d4447c5a2ce7920662078a845ae300966bc9425632f80f81cfd19b223c8f0c108c7e6e636a4503837b7202b643bc3c933d3e894d3a0f7a0358d4458
-EBUILD burp-1.4.26.ebuild 2154 SHA256 ffb7fa58ed34fd139466282618fbfa702e72b2249def15bfc05b2d55aadae646 SHA512 32e3a21349a2d2e962f96aa6697880e8a85c3e429b72551ba2097b9cc71288b27317d13d61ae17312221337bb23d85390af44222f9215647661ed730372ff00c WHIRLPOOL 91ffddf908fa8305d771b86e116f9690715406deb7b765e9c70011b86b02665834e1de9c10329594da346b4028cbf7cd547501c3cd7454e3f9895a620a06e2f1
-MISC ChangeLog 843 SHA256 b2a3e3f321750a60869800838610e5b9e17e250a216134817b07ea5bc2caf2c7 SHA512 1cc6d26a883ce8884d1ed09dd212ce1a3dfdd8e5589859209fc20ffdb08b44ed80e74ab2297a91abce319eeb5829756feb92babd2fb66e53b86fb3c146ff9598 WHIRLPOOL 299bb094bdb46149872256d46cb8ff3a7ca1392b424837d1fde62596573f5bbd11bf4aa27979b1ae68a8684dadd9c9cd40e5949bdc66f850f388c8b59b59ef38
+EBUILD burp-1.4.26.ebuild 2474 SHA256 56e5326c8d3753900ce5b5f740320c741c8b13d917ded364c54df46024ac3edb SHA512 1fb846302758722c70fd2eb8a635f4a486f8ba760562d08b86f97e947257cf0ac781c47fbb6b20048be1ee6f853611e3766021651dffa2b910033c76518d91e8 WHIRLPOOL c351e9ee9fab86fb8f2a93df68a78885fc5f075d4cf0c0b0b9e945bd5bac89de50949fe8e6668d0023e672ffac14100b4253e1c70e066fe80eed0ec9b4ca171d
+MISC ChangeLog 1132 SHA256 6c962d1fb56529aad1c64ed17555cf4bce4d40e3206316b8f787b8c4e40b5b9f SHA512 bab172268848a7755d854920b004a7f8380b6cf578db7b2ba923265f8e9f3f1474e7bad4620504ca6d268fdbc4944a88c3b67cfc69c2ae28746dd8e22c293d20 WHIRLPOOL caa59594aa3e93e4b52d734bdea42b2c9b049bf4957e2a60c293941388186ffcbbec10dfb8d25175ab4af812ef09e21ac8a22faa2c4aed0122fc20d9797f59fa
 MISC metadata.xml 556 SHA256 9c70bf04bfc1bf607ab5319f644fb52eb4e3aa53fe1cc6d7453a6eae3d8463e6 SHA512 31801c6438c7e6bd44dbd2cd137c509584d91c57837dca6392544bd312a6ff4abb5cbd9b7486983d2146a18f9b22303bfa69a66982cbdecbf8daff78b43cdfae WHIRLPOOL ab1cc652c1a6a78777f09678649faa17dc648139dcc8f9c7045a0c0aaaf18b1178be75f60b89939c9606885dce4b152c95aae061e8bd0ff2b6cf644ec7d4df24
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJUa7PMAAoJEPATRTHh2/q1MpgIAIE6/zJq9Y0qtMyXD1HN3WGU
+RYurLD7rHkJnW83ySGl7AUVJdRFWlkee7l/ZK0yGTye5LXka8SDweTVIdH/y8SFG
+IojPRu/MUfMHNtPV2add74YboRkBt0TgXq4Dhrd39nFWgfW8ibI8V9DRotGicfdn
+AP/jxX6y6CmoD7WU+ztFibjbT98pZ1EZbulv9T2ZZytyzD4kIea6KWteZUZWO84k
+g7jD76xbII3lbj8L6CxgOvSBl5ZHt43lcMmhFDavlhwEk1/QiYApOboRP9oILieB
+QbonFTOxif4fsgVertVxu3I/ZiNq1NAuSgKjQQRbmF8rN9/U7NVGrqGAh+D8nl0=
+=aeT7
+-----END PGP SIGNATURE-----
