@@ -13,10 +13,15 @@ depend() {
 
 start() {
 	ebegin "Starting burp server"
+	if [ ! -d /run/lock/burp ]; then
+		mkdir -m 0775 /run/lock/burp
+		chown burp:burp /run/lock/burp
+	fi
 	start-stop-daemon --start \
 		--pidfile "$PIDFILE" \
 		--make-pidfile \
 		--background \
+		--wait 500 \
 		--exec /usr/sbin/burp -- -c /etc/burp/burp-server.conf -F
 	eend $? "Failed to start burp server"
 }
